--- a/references.bib
+++ b/references.bib
@@ -220,6 +220,46 @@ doi = {10.1177/0956797609357751}
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@article{deaux1987putting,
+  title={Putting gender into context: An interactive model of gender-related behavior.},
+  author={Deaux, Kay and Major, Brenda},
+  journal={Psychological review},
+  volume={94},
+  number={3},
+  pages={369},
+  year={1987},
+  publisher={American Psychological Association}
+}
+
+@article{dovidio2006nonverbal,
+  title={Nonverbal communication, race, and intergroup interaction.},
+  author={Dovidio, John F and Hebl, Michelle and Richeson, Jennifer A and Shelton, J Nicole},
+  year={2006},
+  publisher={Sage Publications, Inc}
+}
+
+@article{hebl2005promoting,
+  title={Promoting the “social” in the examination of social stigmas},
+  author={Hebl, Michelle R and Dovidio, John F},
+  journal={Personality and Social Psychology Review},
+  volume={9},
+  number={2},
+  pages={156--182},
+  year={2005},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{tolman2006looking,
+  title={Looking good, sounding good: Femininity ideology and adolescent girls' mental health},
+  author={Tolman, Deborah L and Impett, Emily A and Tracy, Allison J and Michael, Alice},
+  journal={Psychology of Women Quarterly},
+  volume={30},
+  number={1},
+  pages={85--95},
+  year={2006},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @article{quinnetal, title={Performance and flow: A review and integration of self-objectification research.}, DOI={10.1037/12304-006}, journal={Self-objectification in women: Causes, consequences, and counteractions.}, author={Quinn, Diane M. and Chaudoir, Stephenie R. and Kallen, Rachel W.}, pages={119–138}, year={2011}}
 
 @article{holland2016,
